[package]
name = "water_http_utils"
version = "0.2.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/HassanSharara"
categories = ["network-programming", "web-programming::http-server" ]
keywords = ["http", "water_http", "water-http","water-server"]
description = "fast and efficient http utils for building structured http frameworks"

[dependencies]
chrono = {version = "0.4.41" , optional = true}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }



[features]
server = []
client = []
advance-server = []
write_logs = ["chrono"]
